<resources>
    <string name="app_name">Maps</string>
    <string name="app">Mandy</string>
    <string name="title_activity_maps">Mandy Maps</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYW5kcmV3MTAwMDAiLCJhIjoiY2s0MHl2NjlsMDZmMjNscGY4OGJ2cWMxayJ9.az_HB4TQxDoywQMl05gisA</string>
    <string name="token">pk.eyJ1IjoiYW5kcmV3MTAwMDAiLCJhIjoiY2s0dWY0YW9nMGM3MTNlbjFidGM1MHB1ZCJ9.kpB8_TGmdCqQkUkHEVl-DA</string>
    <string name="title_activity_main">Mandy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_traffic">Traffic</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="traffic_status">Traffic Status</string>
    <string name="user_location_permission_explanation">This is your location</string>
    <string name="user_location_permission_not_granted">Permission not granted to access location</string>
    <string name="this_is_the_first_card">Nairobi</string>
    <string name="monday_12_30pm_mostly_cloudy">Monday, 12:30PM, Mostly Cloudy</string>


    //Resource for Material.io


    <string name="cat_card_title">Cards</string>
    <string name="cat_card_draggable_card">Draggable Card</string>
    <string name="cat_card_selection_mode">Selectable Cards</string>
    <string name="cat_card_selectable_item_title">Message</string>
    <string name="cat_card_states">Card States</string>
    <string name="cat_card_list" translatable="false">Card List With Drag-and-Drop</string>
    <string name="cat_card_draggable_card_content">This is a draggable Card.</string>
    <string name="route_to_home">Traffic Update on your Route to Home</string>
    <string name="satellite">Satellite</string>
    <string name="street_view">Street View</string>
    <string name="cat_card_state_none">None</string>
    <string name="traffic_within_location">Traffic Update within your Location</string>
    <string name="cat_card_m1_section_title">Material 1 CardView</string>
    <string name="cat_card_description">
    Cards represent entry points into deeper levels of detail or navigation, such as an album in
    Music or an upcoming vacation in Trips. They can be used in a grid, carousel, or feed to
    contain groups of individual packaged information.
  </string>
    <string name="cat_card_spacing_desc">
    Cards on mobile default to 8dp margins. layout_margin needs to be set directly on a View in its
    layout and will not work when included as part of a style.
  </string>
    <string name="cat_card_clickable_desc">
    Cards can be clickable.
  </string>
    <string name="cat_card_elevation_desc">Card header comes here.</string>
    <string name="cat_card_m1_desc">
    CardView from the Support Library works side-by-side with MaterialCardView. These cards default
    to Material 1 styles and support fewer style attributes than MaterialCardView.
  </string>
    <string name="cat_card_style_only_desc">
    MaterialCardView uses the correct styles by default and makes use of additional style attributes
    that are not provided in CardView. If you do not need to use the new style attributes, you can
    use MaterialCardView in your layout, or apply a style tag to a CardView. We recommend using
    the MaterialCardView class for the latest Material designs and maximum flexibility in your UI.
  </string>
    <string name="cat_card_select">View Traffic Update</string>
    <string name="cat_card_selectable_content">
    Lorem ipsum dolor sit amet, nec no nominavi scaevola. Per et sint sapientem, nobis perpetua salutandi mei te. Quo tamquam probatus reprehendunt in. Eos esse purto eruditi ea. Enim tation persius ut sea, eos ad consul populo.
    Ne eum solet altera. Cibo eligendi et est, electram theophrastus te vel eu.
  </string>

    <!-- Rich Media Demo Strings -->
    <string name="cat_card_rich_media_demo">Rich Media Cards</string>
    <string name="cat_card_rich_media_sample_1">Sample #1</string>
    <string name="cat_card_rich_media_sample_2">Sample #2</string>
    <string name="cat_card_rich_media_sample_3">Sample #3</string>
    <string name="cat_card_rich_media_view_overline">Title goes here</string>
    <string name="cat_card_rich_media_view_title">Title goes here</string>
    <string name="cat_card_rich_media_title_view_description">Card Title</string>
    <string name="cat_card_rich_media_view_subtitle">Subtitle goes here</string>
    <string name="cat_card_rich_media_subtitle_view_description">Card Subtitle</string>
    <string name="cat_card_rich_media_view_secondary_line_text">Secondary line text Lorem ipsum dolor sit amet, nec no nominavi scaevola. Per et sint sapientem, nobis perpetua salutandi mei te.</string>
    <string name="cat_card_rich_media_logo_view_description">Card Logo</string>
    <string name="cat_card_rich_media_image_view_description">Card Image</string>
    <string name="cat_card_rich_media_rating_text">4.5 (413)</string>
    <string name="cat_card_rich_media_rating_view_description">Card Rating</string>
    <string name="cat_card_rich_media_chip_title_1">Item 1</string>
    <string name="cat_card_rich_media_chip_title_2">Item 2</string>
    <string name="cat_card_rich_media_chip_title_3">Item 3</string>
    <string name="cat_card_rich_media_chip_title_4">Item 4</string>
    <string name="cat_card_rich_media_action_1">Action 1</string>
    <string name="cat_card_rich_media_action_2">Action 2</string>

    <string description="A description of an action that a user of an accessibility service can perform to move the card to the top left corner of the screen. [CHAR LIMIT=25]"
        name="cat_card_action_move_top_left">Move to top left</string>


    <string description="A description of an action that a user of an accessibility service can perform to swap the card with the one above it. [CHAR LIMIT=25]"
        name="cat_card_action_move_up">Move Up</string>
    <string description="A description of an action that a user of an accessibility service can perform to swap the card with the one below it. [CHAR LIMIT=25]"
        name="cat_card_action_move_down">Move Down</string>
    <string description="A description of an action that a user of an accessibility service can perform to move the card to the top right corner of the screen. [CHAR LIMIT=25]"
        name="cat_card_action_move_top_right">Move to top right</string>
    <string description="A description of an action that a user of an accessibility service can perform to move the card to the bottom left corner of the screen. [CHAR LIMIT=25]"
        name="cat_card_action_move_bottom_left">Move to bottom left</string>
    <string description="A description of an action that a user of an accessibility service can perform to move the card to the bottom right corner of the screen. [CHAR LIMIT=25]"
        name="cat_card_action_move_bottom_right">Move to bottom right</string>
    <string description="A description of an action that a user of an accessibility service can perform to move the card to the center of the screen. [CHAR LIMIT=25]"
        name="cat_card_action_move_center">Move to center</string>

    <string description="a transient text that appears on screen when a card is dismissed [CHAR LIMIT=30]"
        name="cat_card_dismissed">Card Dismissed</string>
    <string description="A label in a button to dismiss the last action [CHAR LIMIT=15]"
        name="cat_card_undo">Undo</string>
    <string description="A label in a button to dismiss the last action [CHAR LIMIT=30]"
        name="cat_card_swipe_to_dismiss">Swipe this card to dismiss it</string>
    <string name="cat_card_swipe_dismiss" description="the title of a screen where you can swipe to dismiss a card [CHAR LIMIT=20]">Card Swipe Dismiss</string>
    <string name="demo_card_text">My Sample Card</string>
    <string name="traffic">View Traffic</string>
    <string name="viewmap">View Map</string>
    <string name="subtext_comes_here">Subtext Comes here</string>
    <string name="an_image">An Image</string>


</resources>
