<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mapbox="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_traffic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<com.google.android.material.card.MaterialCardView
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.4"
    android:layout_margin="10dp"
    android:clickable="true"
    android:focusable="true"
    app:contentPadding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/route_to_home"
        android:textAppearance="?attr/textAppearanceBody1"/>
</com.google.android.material.card.MaterialCardView>

<com.google.android.material.card.MaterialCardView
    android:id="@+id/checkable_card"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.4"
    android:layout_margin="10dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    app:contentPadding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/traffic_within_location"
        android:textAppearance="?attr/textAppearanceBody1"/>

</com.google.android.material.card.MaterialCardView>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:textAlignment="center"
    android:textSize="15sp"
    android:layout_marginBottom="8dp"
    android:text="@string/cat_card_select"
    android:textAppearance="?attr/textAppearanceBody1"/>

<RadioGroup
    android:id="@+id/cat_card_radio_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/pressed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/satellite"/>
    <RadioButton
        android:id="@+id/hovered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/street_view"/>


</RadioGroup>

</LinearLayout>
